# BlueMagmaEngine

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  build_linux.sh
.github/workflows/: ci-core.yml  ci-example.yml  cmake-multi-platform.yml
BlueMagma/: CMakeLists.txt
BlueMagma/Source/: BlueMagma.hpp  bmpch.hpp
BlueMagma/Source/BlueMagma/: Application.cpp  Application.hpp  Assert.hpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  EventDispatcher.hpp  Layer.cpp  Layer.hpp  LayerMachine.cpp  LayerMachine.hpp  Log.cpp  Log.hpp  Random.cpp  SoundManager.cpp  SoundManager.hpp  Vec2.hpp  Window.cpp  Window.hpp
BlueMagma/Source/BlueMagma/Asset/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  DefaultFont.hpp  SoundManager.cpp  SoundManager.hpp
BlueMagma/Source/BlueMagma/Base/: Application.cpp  Application.hpp  EventDispatcher.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
BlueMagma/Source/BlueMagma/Core/: Assert.hpp  Camera2D.cpp  Camera2D.hpp  Log.cpp  Log.hpp  Random.cpp  Random.hpp  Rect.hpp  Timer.cpp  Timer.hpp  Transform2D.hpp  Vec2.hpp
BlueMagma/Source/BlueMagma/Layer/: AppLayer.cpp  AppLayer.hpp  Layer.cpp  Layer.hpp  LayerMachine.cpp  LayerMachine.hpp
BlueMagma/Source/BlueMagma/Scene/: Component.hpp  Entity.cpp  Entity.hpp  EntityHandle.hpp  Scene.cpp  Scene.hpp
BlueMagma/Source/BlueMagma/Scene/Component/: Base.hpp  UI.hpp  UIMaker.cpp  UIMaker.hpp
BlueMagma/Source/BlueMagma/Scene/System/: ISystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  UISystem.cpp  UISystem.hpp
BlueMagma/Source/BlueMagma/Scene/System/UI/: ClickableSystem.cpp  ClickableSystem.hpp  InputTextSystem.cpp  InputTextSystem.hpp  UISystem.cpp  UISystem.hpp  WidgetColorSystem.cpp  WidgetColorSystem.hpp  WidgetSystem.cpp  WidgetSystem.hpp
BlueMagma/Source/BlueMagma/System/: Random.hpp  Timer.cpp  Timer.hpp  Vec2.hpp
Demo/: CMakeLists.txt
Demo/Config/: LoadAsset.yml
Demo/Source/: DemoLayer.cpp  DemoLayer.hpp  GameLayer.cpp  GameLayer.hpp  Main.cpp  PaddleLayer.cpp  PaddleLayer.hpp
